Added tests, https, updated deps